force-app/main/default/objects/Loan__c/fields/Desire_Loan_Amount__c.field-meta.xml
<CustomField>
    <fullName>Desire_Loan_Amount__c</fullName>
    <label>Desire Loan Amount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>