force-app/main/default/objects/Loan__c/fields/Session_Object__c.field-meta.xml
<CustomField>
    <fullName>Session_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Session Object</label>
    <referenceTo>Session_Object__c</referenceTo>
    <relationshipLabel>Loan</relationshipLabel>
    <relationshipName>Loan</relationshipName>
    <type>Lookup</type>
</CustomField>