force-app/main/default/objects/Loan__c/listViews/MyFinance.listView-meta.xml
<ListView>
    <fullName>MyFinance</fullName>
    <columns>NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Finance</label>
</ListView>